# John-Flavortown

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __init__.py  api.py  bot.py  config.py  crypto.py  demo.py  errors.py  hackatime.py  http.py  main.py  storage.py  utils.py
bot/cogs/: admin.py  commands.py  devlogs.py  login.py  overlap.py  profile.py  projects.py  search.py  settings.py  system.py  views.py
bot/tests/: test_crypto.py  test_storage.py
docs/: discord_bot_setup.md
